testsuite/tests/parsing/quotedextensions.compilers.reference
[
  structure_item (quotedextensions.ml[10+0]..[10+23])
    Pstr_extension "M.foo"
    [
      structure_item (quotedextensions.ml[10+0]..[10+23]) ghost
        Pstr_eval
        expression (quotedextensions.ml[10+0]..[10+23]) ghost
          Pexp_constant PConst_string (" <hello>{x} ",(quotedextensions.ml[10+9]..[10+21]),Some "")
    ]
  structure_item (quotedextensions.ml[11+0]..[11+32])
    Pstr_extension "M.foo"
    [
      structure_item (quotedextensions.ml[11+0]..[11+32]) ghost
        Pstr_eval
        expression (quotedextensions.ml[11+0]..[11+32]) ghost
          Pexp_constant PConst_string (" <hello>{|x|} ",(quotedextensions.ml[11+13]..[11+27]),Some "bar")
    ]
  structure_item (quotedextensions.ml[14+0]..[17+3])
    Pstr_modtype "S" (quotedextensions.ml[14+12]..[14+13])
      module_type (quotedextensions.ml[14+16]..[17+3])
        Pmty_signature
        [
          signature_item (quotedextensions.ml[15+2]..[15+25])
            Psig_extension "M.foo"
            [
              structure_item (quotedextensions.ml[15+2]..[15+25]) ghost
                Pstr_eval
                expression (quotedextensions.ml[15+2]..[15+25]) ghost
                  Pexp_constant PConst_string (" <hello>{x} ",(quotedextensions.ml[15+11]..[15+23]),Some "")
            ]
          signature_item (quotedextensions.ml[16+2]..[16+34])
            Psig_extension "M.foo"
            [
              structure_item (quotedextensions.ml[16+2]..[16+34]) ghost
                Pstr_eval
                expression (quotedextensions.ml[16+2]..[16+34]) ghost
                  Pexp_constant PConst_string (" <hello>{|x|} ",(quotedextensions.ml[16+15]..[16+29]),Some "bar")
            ]
        ]
  structure_item (quotedextensions.ml[20+0]..[22+26])
    Pstr_value Nonrec
    [
      <def>
        pattern (quotedextensions.ml[20+4]..[20+26])
          Ppat_extension "M.foo"
          [
            structure_item (quotedextensions.ml[20+4]..[20+26]) ghost
              Pstr_eval
              expression (quotedextensions.ml[20+4]..[20+26]) ghost
                Pexp_constant PConst_string (" <hello>{x} ",(quotedextensions.ml[20+12]..[20+24]),Some "")
          ]
        core_type (quotedextensions.ml[21+4]..[21+26])
          Ptyp_extension "M.foo"
          [
            structure_item (quotedextensions.ml[21+4]..[21+26]) ghost
              Pstr_eval
              expression (quotedextensions.ml[21+4]..[21+26]) ghost
                Pexp_constant PConst_string (" <hello>{x} ",(quotedextensions.ml[21+12]..[21+24]),Some "")
          ]
        expression (quotedextensions.ml[22+4]..[22+26])
          Pexp_extension "M.foo"
          [
            structure_item (quotedextensions.ml[22+4]..[22+26]) ghost
              Pstr_eval
              expression (quotedextensions.ml[22+4]..[22+26]) ghost
                Pexp_constant PConst_string (" <hello>{x} ",(quotedextensions.ml[22+12]..[22+24]),Some "")
          ]
    ]
  structure_item (quotedextensions.ml[23+0]..[25+35])
    Pstr_value Nonrec
    [
      <def>
        pattern (quotedextensions.ml[23+4]..[23+35])
          Ppat_extension "M.foo"
          [
            structure_item (quotedextensions.ml[23+4]..[23+35]) ghost
              Pstr_eval
              expression (quotedextensions.ml[23+4]..[23+35]) ghost
                Pexp_constant PConst_string (" <hello>{|x|} ",(quotedextensions.ml[23+16]..[23+30]),Some "bar")
          ]
        core_type (quotedextensions.ml[24+4]..[24+35])
          Ptyp_extension "M.foo"
          [
            structure_item (quotedextensions.ml[24+4]..[24+35]) ghost
              Pstr_eval
              expression (quotedextensions.ml[24+4]..[24+35]) ghost
                Pexp_constant PConst_string (" <hello>{|x|} ",(quotedextensions.ml[24+16]..[24+30]),Some "bar")
          ]
        expression (quotedextensions.ml[25+4]..[25+35])
          Pexp_extension "M.foo"
          [
            structure_item (quotedextensions.ml[25+4]..[25+35]) ghost
              Pstr_eval
              expression (quotedextensions.ml[25+4]..[25+35]) ghost
                Pexp_constant PConst_string (" <hello>{|x|} ",(quotedextensions.ml[25+16]..[25+30]),Some "bar")
          ]
    ]
  structure_item (quotedextensions.ml[28+0]..[32+2])
    Pstr_extension "M.foo"
    [
      structure_item (quotedextensions.ml[28+0]..[32+2]) ghost
        Pstr_eval
        expression (quotedextensions.ml[28+0]..[32+2]) ghost
          Pexp_constant PConst_string ("\n <hello>\n   {x}\n </hello>\n",(quotedextensions.ml[28+9]..[32+0]),Some "")
    ]
]

File "quotedextensions.ml", line 10, characters 3-8:
10 | {%%M.foo| <hello>{x} |}
        ^^^^^
Error: Uninterpreted extension 'M.foo'.
